Fix spacing list and increase in image captions (#313)
* Fix  list spacing

* Increase spacing in image captions

* Add margin top for h1

* Update screenshots

* Fix <p> margins in <li>

---------

--- a/src/style.css
+++ b/src/style.css
@@ -33,11 +33,18 @@
   .prose {
     @apply prose-p:my-[0.5em];
     @apply prose-li:my-[0.25em];
+    @apply prose-ol:my-[0.5em];
     @apply prose-ul:my-[0.5em];
+    @apply prose-h1:mt-[1em];
     @apply prose-h2:mt-[1.5em];
     @apply text-black dark:text-white;
     --tw-prose-bullets: currentColor;
     max-width: 100%;
+  }
+
+  .prose li > p {
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   .button {
